# rust_4ire_homework

./: .gitignore  Cargo.toml  readme.md
area/: Cargo.toml
area/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
src/: main.rs
volume/: Cargo.toml
volume/src/: lib.rs
