[package]
name = "rust_course_homework"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volume = { path = "./volume" }
area = { path = "./area" }
common = { path = "./common" }

[workspace]
members = [
    "area",
    "volume"
]